--- a/public/css/KTAnchor.css
+++ b/public/css/KTAnchor.css
@@ -26,7 +26,11 @@ body{overflow:hidden;background:#fff;color:#292f33;font-size:14px;line-height:18
 .bold-medium{font-weight:bold;}
 a, .bold-medium{font-size:8.75pt;color:#5d656b;border:medium none;text-decoration:none;-webkit-tap-highlight-color:rgba(0,0,0,0);}
 a:hover, .bold-medium:hover{text-decoration:none;}
-table{border-collapse:collapse;}
+table {width:100%;border-collapse: collapse;border:none;}
+.response-container table thead td {height:25px;padding:3px;font-weight: bold;}
+.response-container table tbody td {height:25px;line-height:25px;padding:3px;}
+.response-container table a.normal-anchor{text-decoration:underline;color:#555;}
+.response-container table a.normal-anchor:hover{text-decoration:none;}
 
 li{list-style-type:none;text-align:center;display:inline-block;}
 
@@ -71,11 +75,10 @@ a.tree-menu-open div{background: url("button_down.gif") no-repeat scroll 27px ce
 .radius-3{-webkit-border-radius:3px;-khtml-border-radius:3px;-moz-border-radius:3px;border-radius:3px;}
 .shadow-3{-webkit-box-shadow:inset 0 1px 3px rgba(0,0,0,0),0 0 8px rgba(0,0,0,0.6);-moz-box-shadow:inset 0 1px 3px rgba(0,0,0,0),0 0 8px rgba(0,0,0,0.6);box-shadow:inset 0 1px 3px rgba(0,0,0,0),0 0 8px rgba(0,0,0,0.6);}
 
-.list-table {width:100%;border-collapse: collapse;border:none;}
-.list-table thead td {height:25px;text-align:center;padding:3px;background-color:#e8e8e8;border:1px solid #dddddd;font-weight: bold;}
-.list-table tbody td {height:25px;text-align:center;line-height:25px;padding:3px;border:1px solid #dddddd;}
-.list-table a.normal-anchor{text-decoration:underline;color:#555;}
-.list-table a.normal-anchor:hover{text-decoration:none;}
+.list-table thead td {background-color:#e8e8e8;text-align:center;border:1px solid #dddddd;}
+.list-table tbody td {border:1px solid #dddddd;text-align:center;}
+.notes-table thead td {background-color:#e8e8e8;border:0;text-align:left;vertical-align:top;}
+.notes-table tbody td {border:0;text-align:left;vertical-align:top;}
 
 .paging-anchor, .paging-anchor:hover{display:inline-block;height:25px;min-width:15px;line-height:25px;text-align:center;color:#333;border:1px solid #ddd;margin:0 3px;padding:0 5px;text-decoration:none;font-size:8.75pt;}
 .paging-current-anchor, .paging-current-anchor:hover{color:#fff;background-color:#aaa;font-weight:bolder;}
