--- a/public/css/KTAnchor.css
+++ b/public/css/KTAnchor.css
@@ -103,7 +103,7 @@ button {vertical-align:middle;-webkit-border-radius:4px;-khtml-border-radius:4px
 .input-error-pop {position:absolute; top:32px; width:101%;height:30px;line-height:30px;background-color:#333;color:#fff;font-size:12px;padding: 2px 4px;z-index:10;}
 .input-error-angle{position:absolute;border-bottom:5px solid #333;top:-4px;left:10px;}
 
-.ct-nav{position:relative;background-color:#eeeeee;width:100%;border:1px solid #dddddd;}
+.ct-nav{position:relative;background-color:#eeeeee;border:1px solid #dddddd;}
 .ct-nav-table{width:100%;}
 .ct-nav-left{text-align:left;}
 .ct-nav-right{text-align:right;}
@@ -112,11 +112,13 @@ button {vertical-align:middle;-webkit-border-radius:4px;-khtml-border-radius:4px
 .ct-search-icon {position:absolute;top:0px;right:0px;}
 
 .content-border {border: 1px solid #ccc;}
-.content-body {margin:15px auto;padding:10px 0;position:relative;text-align:left;width:100%;}
+.content-body {margin:15px auto;padding:10px 0;position:relative;text-align:left;}
 
 .kt-popup-loader {position:absolute;top:0;left:0;width:100%;height:100%;display:none;}
 .kt-popup-mask{position:absolute;top:0;left:0;width:100%;height:100%;background-color:#000;opacity:0.15;-moz-opacity:0.15;FILTER:progid:DXImageTransform.Microsoft.Alpha(opacity=15);}
-.kt-popup-doc {position:relative;background-color:#ffffff;width:68%;height:82%;margin:5% auto;border:1px solid #ffffff;opacity:1;}
+.kt-popup-doc {position:relative;background-color:#ffffff;width:80%;height:82%;margin:5% auto;border:1px solid #ffffff;opacity:1;}
 .kt-popup-shadow{width:100%;height:1px;position:absolute;top:40px;}
 .kt-popup-head{width:100%;height:40px;line-height:40px;text-align:right;overflow:hidden;position:absolute;top:0px;left:0px;background-color:#fff;}
-.kt-popup-body{width:100%;text-align:center;overflow:hidden;position:relative;}
+.kt-popup-body{text-align:center;overflow:hidden;position:relative;padding:20px;}
+.kt-popup-title{color:333;font-size:23px;width:100%;height:100%;text-align:center;}
+.kt-popup-close{position:absolute;display:block;font-family:octicons;font-size:23px;top:0px;right:0px;margin-right:10px;cursor:pointer;}
