--- a/public/bootstrap/css/KTAnchor.css
+++ b/public/bootstrap/css/KTAnchor.css
@@ -1,5 +1,20 @@
+body{overflow:hidden;}
 label{font-weight:normal;}
-.body-background {height:100%;width:100%;top:0px;left:0px;position:absolute; background:rgba(0,0,0,0) url(/css/cn_bg.jpg) no-repeat scroll 0 0 / cover;}
+.body-background {height:100%;width:100%;top:0px;left:0px;position:absolute; background:rgba(0,0,0,0) url(/css/cn_bg.jpg) no-repeat scroll 0 0 / cover;z-index:-1;}
+
+.navbar>.container{width:100%;}
+.navbar {min-height:40px;border-radius:0;margin-bottom:0;}
+.navbar-brand {height: 40px;line-height: 10px;}
 .navbar-nav>li>a {padding-top:10px;padding-bottom:10px;}
-.navbar {min-height:40px;border-radius:0;}
+.navbar-nav>li>.dropdown-menu {border-top-left-radius:4px;border-top-right-radius:4px;margin-top:3px;}
+.navbar-nav>li>.dropdown-menu>.dropdown-menu-arrow {position:absolute;top:0;right:0;}
+.navbar-nav>li>.dropdown-menu>.dropdown-menu-arrow>.glyphicon-eject{font-size:23px;color:#ffffff;top:-9px;}
+.navbar-right .dropdown-menu>.dropdown-menu-arrow>.glyphicon-eject{right:6px;}
+
 .modal-dialog {width:340px;left:15%;top:50%;position:absolute;}
+.alert {bottom:2px;height:80px;margin:0 19%;position:absolute;width:62%;line-height:50px;display:none;}
+
+.body-content {position:absolute;width:100%;height:100%;top:40px;left:0;}
+.body-content-left, .body-content-right {overflow-x:hidden;overflow-y:scroll;float:left;display:inline-block;background:rgba(255, 255, 255, 0.8);}
+.body-content-left {width:20%;}
+.body-content-right {width:80%;}
