--- a/public/bootstrap/css/KTAnchor.css
+++ b/public/bootstrap/css/KTAnchor.css
@@ -1,20 +1,45 @@
 body{overflow:hidden;}
 label{font-weight:normal;}
-.body-background {height:100%;width:100%;top:0px;left:0px;position:absolute; background:rgba(0,0,0,0) url(/css/cn_bg.jpg) no-repeat scroll 0 0 / cover;z-index:-1;}
 
+/* 背景图 */
+.body-background {height:100%;width:100%;top:0px;left:0px;position:absolute; background:rgba(0,0,0,0) url(/css/cn_bg.jpg) no-repeat scroll 0 0 / cover; z-index:-1;}
+/* 透明度 */
+.opacity-95 {opacity:0.95;-moz-opacity:0.95;FILTER:progid:DXImageTransform.Microsoft.Alpha(opacity=95);}
+.opacity-80 {opacity:0.8;-moz-opacity:0.8;FILTER:progid:DXImageTransform.Microsoft.Alpha(opacity=805);}
+
+/* 导航的菜单 */
 .navbar>.container{width:100%;}
-.navbar {min-height:40px;border-radius:0;margin-bottom:0;}
+.navbar {min-height:40px;}
 .navbar-brand {height: 40px;line-height: 10px;}
 .navbar-nav>li>a {padding-top:10px;padding-bottom:10px;}
+
+/* 下拉菜单修改为带小尖头的 */
 .navbar-nav>li>.dropdown-menu {border-top-left-radius:4px;border-top-right-radius:4px;margin-top:3px;}
-.navbar-nav>li>.dropdown-menu>.dropdown-menu-arrow {position:absolute;top:0;right:0;}
-.navbar-nav>li>.dropdown-menu>.dropdown-menu-arrow>.glyphicon-eject{font-size:23px;color:#ffffff;top:-9px;}
-.navbar-right .dropdown-menu>.dropdown-menu-arrow>.glyphicon-eject{right:6px;}
+.navbar-nav>li>.dropdown-menu>.dropdown-menu-arrow {position:absolute;top:-7px;right:7px;width:20px;height:10px;}
+.angle-down,.angle-up{position:absolute;display:inline-block;height:0;width:0;border-left:10px solid transparent;border-right:10px solid transparent;}
+.angle-down{border-top:10px solid #ffffff;}
+.angle-up{border-bottom:10px solid #ffffff;}
 
+/* dialog 和 alert 调整样子 */
 .modal-dialog {width:340px;left:15%;top:50%;position:absolute;}
-.alert {bottom:2px;height:80px;margin:0 19%;position:absolute;width:62%;line-height:50px;display:none;}
+.alert {bottom:2px;height:80px;margin:0 23%;position:absolute;width:54%;line-height:50px;display:none;}
+/* .alert-warning {background-color:#ffff48} */
 
+/* 正文部分 和 左右内容 */
 .body-content {position:absolute;width:100%;height:100%;top:40px;left:0;}
-.body-content-left, .body-content-right {overflow-x:hidden;overflow-y:scroll;float:left;display:inline-block;background:rgba(255, 255, 255, 0.8);}
+.body-content-left, .body-content-right {height:100%;overflow-x:hidden;overflow-y:scroll;float:left;display:inline-block;background:#ffffff no-repeat scroll 0 0 / cover;}
 .body-content-left {width:20%;}
 .body-content-right {width:80%;}
+
+/* 树状菜单 */
+a.tree-menu, a.tree-select-menu {width:100%;display:block;color:#333;cursor:pointer;text-decoration:none}
+a.tree-menu div, a.tree-select-menu div{position:relative;text-align:left;height:25px;line-height:25px;font-size:12px}
+a.tree-select-menu div{background-color:#ddd}
+a.tree-menu div:hover{background-color:#eee}
+a.tree-menu-0 div{font-weight:bold;height:25px;line-height:25px;padding:0 0 0 10px;border-bottom:1px solid #ccc}
+a.tree-menu-1 div{padding:0 0 0 40px}
+a.tree-menu-2 div{padding:0 0 0 70px}
+a.tree-menu-close div{background: url("button_right.gif") no-repeat scroll 27px center rgba(0,0,0,0)}
+a.tree-menu-open div{background: url("button_down.gif") no-repeat scroll 27px center rgba(0,0,0,0)}
+
+.pagination>.active>a, .pagination>.active>a:hover {background-color:#ccc;border-color:#ccc;color:#666;}
