--- a/public/bootstrap/css/KTAnchor.css
+++ b/public/bootstrap/css/KTAnchor.css
@@ -21,8 +21,9 @@ label{font-weight:normal;}
 .angle-up{border-bottom:10px solid #ffffff;}
 
 /* dialog 和 alert 调整样子 */
-.window-modal-dialog{position:absolute;top:0px;width:100%;height:100%;left:0px;}
-.window-modal-dialog>.modal-dialog {width:80%;height:80%;left:10%;top:40px;position:absolute;}
+.popup-model>.modal-dialog{width:85%;height:85%;top:40px;overflow:hidden}
+.popup-model>.modal-dialog>.modal-content{width:100%;height:100%;}
+.popup-model>.modal-dialog>.modal-content>.scroll-container{overflow-x:hidden;overflow-y:scroll;}
 .cn-modal-dialog>.modal-dialog {width:340px;left:15%;top:50%;position:absolute;}
 .alert {bottom:2px;height:80px;margin:0 23%;position:absolute;width:54%;line-height:50px;display:none;}
 /* .alert-warning {background-color:#ffff48} */
@@ -33,7 +34,6 @@ label{font-weight:normal;}
 .body-content-left {width:20%;}
 .body-content-right {width:80%;}
 .body-content>.scroll-container{overflow-x:hidden;overflow-y:scroll;}
-.window-modal-dialog>.modal-dialog>.modal-content>.scroll-container{overflow-x:hidden;overflow-y:auto;height:500px;}
 
 /* 树状菜单 */
 a.tree-menu, a.tree-select-menu {width:100%;display:block;color:#333;cursor:pointer;text-decoration:none}
