--- a/public/bootstrap/css/KTAnchor.css
+++ b/public/bootstrap/css/KTAnchor.css
@@ -48,3 +48,37 @@ a.tree-menu-open div{background: url("button_down.gif") no-repeat scroll 27px ce
 
 /* 分页 */
 .pagination>.active>a, .pagination>.active>a:hover {background-color:#ccc;border-color:#ccc;color:#666;}
+
+.bs-glyphicons-list {
+    list-style: outside none none;
+    padding-left: 0;
+}
+ul, ol {
+    margin-bottom: 10px;
+    margin-top: 0;
+}
+.bs-glyphicons li {
+    font-size: 12px;
+    width: 12.5%;
+}
+.bs-glyphicons li {
+    background-color: #f9f9f9;
+    border: 1px solid #fff;
+    float: left;
+    font-size: 10px;
+    height: 115px;
+    line-height: 1.4;
+    padding: 10px;
+    text-align: center;
+    width: 25%;
+}
+.bs-glyphicons .glyphicon {
+    font-size: 24px;
+    margin-bottom: 10px;
+    margin-top: 5px;
+}
+.bs-glyphicons .glyphicon-class {
+    display: block;
+    overflow-wrap: break-word;
+    text-align: center;
+}
