--- a/public/bootstrap/css/KTAnchor.css
+++ b/public/bootstrap/css/KTAnchor.css
@@ -1,6 +1,9 @@
 body{overflow:hidden;}
 label{font-weight:normal;}
 
+/* 进度条 */
+.request-progress {position:absolute;width:100%;height:5px;background-color:#00FF33;top:0px;left:0px;display:none;}
+
 /* 背景图 */
 .body-background {height:100%;width:100%;top:0px;left:0px;position:absolute; background:rgba(0,0,0,0) url(/css/cn_bg.jpg) no-repeat scroll 0 0 / cover; z-index:-1;}
 /* 透明度 */
@@ -70,7 +73,7 @@ ul, ol {
     line-height: 1.4;
     padding: 10px;
     text-align: center;
-    width: 25%;
+    width: 10%;
 }
 .bs-glyphicons .glyphicon {
     font-size: 24px;
