--- a/public/bootstrap/css/KTAnchor.css
+++ b/public/bootstrap/css/KTAnchor.css
@@ -1,6 +1,8 @@
 body{overflow:hidden;}
 label{font-weight:normal;}
 
+body .container{width:100%;}
+
 /* 进度条 */
 .request-progress {position:absolute;width:100%;height:5px;background-color:#00FF33;top:0px;left:0px;display:none;}
 
@@ -25,7 +27,7 @@ label{font-weight:normal;}
 
 /* dialog 和 alert 调整样子 */
 .popup-model>.modal-dialog{width:85%;height:85%;top:40px;overflow:hidden}
-.popup-model>.modal-dialog>.modal-content{width:100%;height:100%;}
+.popup-model>.modal-dialog>.modal-content{width:100%;height:100%;overflow: hidden;}
 .popup-model>.modal-dialog>.modal-content>.scroll-container{overflow-x:hidden;overflow-y:scroll;}
 .cn-modal-dialog>.modal-dialog {width:340px;left:15%;top:50%;position:absolute;}
 .alert {bottom:2px;height:80px;margin:0 23%;position:absolute;width:54%;line-height:50px;display:none;}
@@ -52,36 +54,9 @@ a.tree-menu-open div{background: url("button_down.gif") no-repeat scroll 27px ce
 /* 分页 */
 .pagination>.active>a, .pagination>.active>a:hover {background-color:#ccc;border-color:#ccc;color:#666;}
 
-.bs-glyphicons-list {
-    list-style: outside none none;
-    padding-left: 0;
-}
-ul, ol {
-    margin-bottom: 10px;
-    margin-top: 0;
-}
-.bs-glyphicons li {
-    font-size: 12px;
-    width: 12.5%;
-}
-.bs-glyphicons li {
-    background-color: #f9f9f9;
-    border: 1px solid #fff;
-    float: left;
-    font-size: 10px;
-    height: 115px;
-    line-height: 1.4;
-    padding: 10px;
-    text-align: center;
-    width: 10%;
-}
-.bs-glyphicons .glyphicon {
-    font-size: 24px;
-    margin-bottom: 10px;
-    margin-top: 5px;
-}
-.bs-glyphicons .glyphicon-class {
-    display: block;
-    overflow-wrap: break-word;
-    text-align: center;
-}
+/* icon 演示页面 */
+.bs-glyphicons-list {list-style: outside none none;padding-left: 0;}
+.bs-glyphicons li {font-size: 12px;width: 12.5%;}
+.bs-glyphicons li {background-color: #f9f9f9;border: 1px solid #fff;float: left;font-size: 10px;height: 115px;line-height: 1.4;padding: 10px;text-align: center;width: 10%;}
+.bs-glyphicons .glyphicon {font-size: 24px;margin-bottom: 10px;margin-top: 5px;}
+.bs-glyphicons .glyphicon-class {display: block;overflow-wrap: break-word;text-align: center;}
