--- a/public/bootstrap/css/KTAnchor.css
+++ b/public/bootstrap/css/KTAnchor.css
@@ -17,6 +17,7 @@ body .container{width:100%;}
 .navbar {min-height:40px;}
 .navbar-brand {height: 40px;line-height: 10px;}
 .navbar-nav>li>a {padding-top:10px;padding-bottom:10px;}
+.container>.navbar-default{border-color:#cccccc;}
 
 /* 下拉菜单修改为带小尖头的 */
 .navbar-nav>li>.dropdown-menu {border-top-left-radius:4px;border-top-right-radius:4px;margin-top:3px;}
