--- a/public/bootstrap/css/KTAnchor.css
+++ b/public/bootstrap/css/KTAnchor.css
@@ -61,3 +61,7 @@ a.tree-menu-open div{background: url("button_down.gif") no-repeat scroll 27px ce
 .bs-glyphicons li {background-color: #f9f9f9;border: 1px solid #fff;float: left;font-size: 10px;height: 115px;line-height: 1.4;padding: 10px;text-align: center;width: 10%;}
 .bs-glyphicons .glyphicon {font-size: 24px;margin-bottom: 10px;margin-top: 5px;}
 .bs-glyphicons .glyphicon-class {display: block;overflow-wrap: break-word;text-align: center;}
+
+.upload-input, .upload-image {height:200px;width:300px;top:0px;left:0px;}
+.upload-input {opacity:0;-moz-opacity:0;FILTER:progid:DXImageTransform.Microsoft.Alpha(opacity=0);}
+.upload-image {background:rgba(0, 0, 0, 0) url(/image/add-file.png) no-repeat scroll 0 0 / cover;border:1px solid #cccccc;}
