--- a/public/bootstrap/css/KTAnchor.css
+++ b/public/bootstrap/css/KTAnchor.css
@@ -2,6 +2,8 @@ body{overflow:hidden;}
 label{font-weight:normal;}
 
 body .container{width:100%;}
+.radius-5{-webkit-border-radius:5px;-khtml-border-radius:5px;-moz-border-radius:5px;border-radius:5px;}
+
 
 /* 进度条 */
 .request-progress {position:absolute;width:100%;height:5px;background-color:#00FF33;top:0px;left:0px;display:none;}
@@ -62,6 +64,15 @@ a.tree-menu-open div{background: url("button_down.gif") no-repeat scroll 27px ce
 .bs-glyphicons .glyphicon {font-size: 24px;margin-bottom: 10px;margin-top: 5px;}
 .bs-glyphicons .glyphicon-class {display: block;overflow-wrap: break-word;text-align: center;}
 
-.upload-input, .upload-image {height:200px;width:300px;top:0px;left:0px;}
+/* 上传图片 */
+.upload-input, .upload-frame {height:200px;width:300px;top:0px;left:0px;}
 .upload-input {opacity:0;-moz-opacity:0;FILTER:progid:DXImageTransform.Microsoft.Alpha(opacity=0);}
-.upload-image {background:rgba(0, 0, 0, 0) url(/image/add-file.png) no-repeat scroll 0 0 / cover;border:1px solid #cccccc;}
+.upload-frame {background:rgba(0, 0, 0, 0) url(/image/add-file.png) no-repeat scroll 0 0 / contain;border:1px solid #cccccc;}
+
+/* input tags */
+.tags-frame{width:600px;height:100%;}
+.tags-frame-focus {border:1px solid #56b4ef;-webkit-box-shadow:0 1px 3px rgba(0, 0, 0, 0.05) inset, 0 0 8px rgba(82, 168, 236, 0.6);-moz-box-shadow:0 1px 3px rgba(0, 0, 0, 0.05) inset, 0 0 8px rgba(82, 168, 236, 0.6);box-shadow:0 1px 3px rgba(0, 0, 0, 0.05) inset, 0 0 8px rgba(82, 168, 236, 0.6);}
+.tags-frame>span{height:25px;line-height:25px;font-size:12px;background-color:#777;padding:0 2px 0 9px;;color:#ffffff;margin:3px 4px;display:inline-block;}
+.tags-frame>span>p{display:inline-block;height:25px;line-height:25px;font-size:12px;color:#ffffff;margin-left:5px;cursor:pointer;padding:0 6px;}
+.tags-frame>input{border:0;}
+.tags-input{display:none;margin-left:3px;}
