--- a/public/bootstrap/css/KTAnchor.css
+++ b/public/bootstrap/css/KTAnchor.css
@@ -1,5 +1,6 @@
 body{overflow:hidden;}
 label{font-weight:normal;}
+input,button,a{outline:0px;}
 
 body .container{width:100%;}
 .radius-5{-webkit-border-radius:5px;-khtml-border-radius:5px;-moz-border-radius:5px;border-radius:5px;}
@@ -70,9 +71,11 @@ a.tree-menu-open div{background: url("button_down.gif") no-repeat scroll 27px ce
 .upload-frame {background:rgba(0, 0, 0, 0) url(/image/add-file.png) no-repeat scroll 0 0 / contain;border:1px solid #cccccc;}
 
 /* input tags */
-.tags-frame{width:600px;height:100%;cursor:text;}
+.form-tags{width:600px;position:relative;}
+.tags-frame{width:100%;height:100%;cursor:text;}
 .tags-frame-focus {border:1px solid #56b4ef;-webkit-box-shadow:0 1px 3px rgba(0, 0, 0, 0.05) inset, 0 0 8px rgba(82, 168, 236, 0.6);-moz-box-shadow:0 1px 3px rgba(0, 0, 0, 0.05) inset, 0 0 8px rgba(82, 168, 236, 0.6);box-shadow:0 1px 3px rgba(0, 0, 0, 0.05) inset, 0 0 8px rgba(82, 168, 236, 0.6);}
 .tags-frame>span{height:25px;line-height:25px;font-size:12px;background-color:#777;padding:0 2px 0 9px;;color:#ffffff;margin:3px 4px;display:inline-block;}
 .tags-frame>span>p{display:inline-block;height:25px;line-height:25px;font-size:12px;color:#ffffff;margin-left:5px;cursor:pointer;padding:0 6px;}
 .tags-frame>input{border:0;}
-.tags-input{display:none;margin-left:3px;}
+.tags-frame>.dropdown-menu{width:100%;}
+.tags-input{display:none;margin-left:3px;outline:0px;}
