--- a/public/bootstrap/css/KTAnchor.css
+++ b/public/bootstrap/css/KTAnchor.css
@@ -78,4 +78,5 @@ a.tree-menu-open div{background: url("button_down.gif") no-repeat scroll 27px ce
 .tags-frame>span>p{display:inline-block;height:25px;line-height:25px;font-size:12px;color:#ffffff;margin-left:5px;cursor:pointer;padding:0 6px;}
 .tags-frame>input{border:0;}
 .tags-frame>.dropdown-menu{width:100%;}
+.tags-frame>.tags-enter{overflow-x:visible;}
 .tags-input{display:none;margin-left:3px;outline:0px;}
