--- a/public/bootstrap/css/KTAnchor.css
+++ b/public/bootstrap/css/KTAnchor.css
@@ -30,9 +30,10 @@ body .container{width:100%;}
 .angle-up{border-bottom:10px solid #ffffff;}
 
 /* dialog 和 alert 调整样子 */
-.popup-model>.modal-dialog{width:85%;height:85%;top:40px;overflow:hidden}
-.popup-model>.modal-dialog>.modal-content{width:100%;height:100%;overflow: hidden;}
-.popup-model>.modal-dialog>.modal-content>.scroll-container{overflow-x:hidden;overflow-y:scroll;}
+.confirm-modal>.modal-dialog,.popup-modal>.modal-dialog{top:40px;}
+.popup-modal>.modal-dialog{width:85%;height:85%;}
+.popup-modal>.modal-dialog>.modal-content{width:100%;height:100%;}
+.popup-modal>.modal-dialog>.modal-content>.modal-body{overflow-x:auto;overflow-y:scroll;}
 .cn-modal-dialog>.modal-dialog {width:340px;left:15%;top:50%;position:absolute;}
 .alert {bottom:2px;height:80px;margin:0 23%;position:absolute;width:54%;line-height:50px;display:none;}
 /* .alert-warning {background-color:#ffff48} */
