--- a/public/css/KTAnchor.css
+++ b/public/css/KTAnchor.css
@@ -1,135 +1,89 @@
-@font-face {
-  font-family: 'octicons';
-  src: url('octicons/octicons.eot?#iefix') format('embedded-opentype'),
-       url('octicons/octicons.woff') format('woff'),
-       url('octicons/octicons.ttf') format('truetype'),
-       url('octicons/octicons.svg#octicons') format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
-.octicon, .mega-octicon {
-  font: normal normal normal 16px/1 octicons;
-  display: inline-block;
-  text-decoration: none;
-  text-rendering: auto;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
+body{overflow:hidden;}
+label{font-weight:normal;}
+input,button,a{outline:0px;}
 
-*{margin:0;padding:0;text-align:left;vertical-align:middle;-webkit-overflow-scrolling: touch;}
-html, body{width:100%;height:100%;}
-body{overflow:hidden;background:#fff;color:#292f33;font-size:14px;line-height:18px;font-size:8.75pt;font-family:Arial;}
-.bold-medium{font-weight:bold;}
-a, .bold-medium{font-size:8.75pt;color:#5d656b;border:medium none;text-decoration:none;-webkit-tap-highlight-color:rgba(0,0,0,0);}
-a:hover, .bold-medium:hover{text-decoration:none;}
-table {width:100%;border-collapse: collapse;border:none;}
-.response-container table thead td {height:25px;padding:3px;font-weight: bold;}
-.response-container table tbody td {height:25px;line-height:25px;padding:3px;}
-.response-container table a.normal-anchor{text-decoration:underline;color:#555;}
-.response-container table a.normal-anchor:hover{text-decoration:none;}
+body .container{width:100%;}
+.radius-5{-webkit-border-radius:5px;-khtml-border-radius:5px;-moz-border-radius:5px;border-radius:5px;}
+.shadow-3{-webkit-box-shadow:inset 0 1px 3px rgba(0,0,0,0),0 0 8px rgba(0,0,0,0.6);-moz-box-shadow:inset 0 1px 3px rgba(0,0,0,0),0 0 8px rgba(0,0,0,0.6);box-shadow:inset 0 1px 3px rgba(0,0,0,0),0 0 8px rgba(0,0,0,0.6);}
 
-li{list-style-type:none;text-align:center;display:inline-block;}
+/* 进度条 */
+.request-progress {position:absolute;width:100%;height:5px;background-color:#00FF33;top:0px;left:0px;display:none;}
 
-.body-table {width:100%;height:100%;background: rgba(0, 0, 0, 0) url(/css/zh_cn_bg.jpg) no-repeat scroll 0 0 / cover ;}
-.nav-left, .nav-right{width:50%;height:40px;background:rgba(0, 0, 0, 0.8);color:#fff;}
-.nav-right{text-align:right;}
-.nav-item{position:relative;display:inline-block;vertical-align:middle;color:#ccc;}
-.nav-item:hover{color:#fff;text-decoration:none;}
-.body-left,.body-right{vertical-align:top;}
-.kt-request-progress {position:absolute;width:100%;height:5px;background-color:#00FF33;top:0px;left:0px;display:none;}
-.kt-message-pop {position:absolute;left:25%;width:50%;bottom:-90px;background:none repeat scroll 0 0 rgba(255,222,111,0.9);height:80px;text-align:center;font-size:25px;line-height:80px;}
-
-a.tree-menu, a.tree-select-menu {width:100%;display:block;color:#333;cursor:pointer;text-decoration:none}
-a.tree-menu div, a.tree-select-menu div{position:relative;text-align:left;height:25px;line-height:25px;font-size:12px}
-a.tree-select-menu div{background-color:#ddd}
-a.tree-menu div:hover{background-color:#eee}
-a.tree-menu-0 div{font-weight:bold;height:25px;line-height:25px;padding:0 0 0 10px;border-bottom:1px solid #ccc}
-a.tree-menu-1 div{padding:0 0 0 40px}
-a.tree-menu-2 div{padding:0 0 0 70px}
-a.tree-menu-close div{background: url("button_right.gif") no-repeat scroll 27px center rgba(0,0,0,0)}
-a.tree-menu-open div{background: url("button_down.gif") no-repeat scroll 27px center rgba(0,0,0,0)}
-
-.dropdown-menu{padding:5px;}
-.dropdown-menu ul li a{display:block;width:80px;font-size:13px;height:18px;line-height:18px;padding:5px 10px;text-align:left;color:#444;text-decoration:none;}
-.dropdown-menu ul li a:hover{background-color:#608EFB;color:#fff;}
-.pop-layout{position:absolute;z-index:10;display:none;}
-.content-board{background-color:#fff;}
+/* 背景图 */
+.body-background {height:100%;width:100%;top:0px;left:0px;position:absolute; background:rgba(0,0,0,0) url(/css/cn_bg.jpg) no-repeat scroll 0 0 / cover; z-index:-1;}
+/* 透明度 */
 .opacity-95 {opacity:0.95;-moz-opacity:0.95;FILTER:progid:DXImageTransform.Microsoft.Alpha(opacity=95);}
 .opacity-80 {opacity:0.8;-moz-opacity:0.8;FILTER:progid:DXImageTransform.Microsoft.Alpha(opacity=805);}
 
-.angle-down,.angle-up{position:absolute;display:inline-block;height:0;width:0;border-left:5px solid transparent;border-right:5px solid transparent;}
-.angle-down{border-top:5px solid #fff;}
-.angle-up{border-bottom:5px solid #fff;}
+/* 导航的菜单 */
+.navbar>.container{width:100%;}
+.navbar {min-height:40px;}
+.navbar-brand {height: 40px;line-height: 10px;}
+.navbar-nav>li>a {padding-top:10px;padding-bottom:10px;}
+.container>.navbar-default{border-color:#cccccc;}
 
-.scroll-container{position:relative;overflow:hidden;-webkit-overflow-scrolling:touch;}
-.scroll-floor {position:absolute;width:9px;height:100%;right:0px;top:0px;background:none repeat scroll 0 0 #eee;}
-.scroll-bar {position:relative;margin:0 1px;width:7px;height:100%;background: none repeat scroll 0 0 #ccc;}
+/* 下拉菜单修改为带小尖头的 */
+.navbar-nav>li>.dropdown-menu {border-top-left-radius:4px;border-top-right-radius:4px;margin-top:3px;}
+.navbar-nav>li>.dropdown-menu>.dropdown-menu-arrow {position:absolute;top:-7px;right:7px;width:20px;height:10px;}
+.angle-down,.angle-up{position:absolute;display:inline-block;height:0;width:0;border-left:10px solid transparent;border-right:10px solid transparent;}
+.angle-down{border-top:10px solid #ffffff;}
+.angle-up{border-bottom:10px solid #ffffff;}
 
-.radius-14{-webkit-border-radius:24px;-khtml-border-radius:24px;-moz-border-radius:24px;border-radius:24px;}
-.radius-5{-webkit-border-radius:5px;-khtml-border-radius:5px;-moz-border-radius:5px;border-radius:5px;}
-.radius-4{-webkit-border-radius:4px;-khtml-border-radius:4px;-moz-border-radius:4px;border-radius:4px;}
-.radius-3{-webkit-border-radius:3px;-khtml-border-radius:3px;-moz-border-radius:3px;border-radius:3px;}
-.shadow-3{-webkit-box-shadow:inset 0 1px 3px rgba(0,0,0,0),0 0 8px rgba(0,0,0,0.6);-moz-box-shadow:inset 0 1px 3px rgba(0,0,0,0),0 0 8px rgba(0,0,0,0.6);box-shadow:inset 0 1px 3px rgba(0,0,0,0),0 0 8px rgba(0,0,0,0.6);}
+/* dialog 和 alert 调整样子 */
+.confirm-modal>.modal-dialog,.popup-modal>.modal-dialog{top:40px;}
+.popup-modal>.modal-dialog{width:85%;height:85%;}
+.popup-modal>.modal-dialog>.modal-content{width:100%;height:100%;overflow:hidden;}
+.popup-modal>.modal-dialog>.modal-content>.modal-body{overflow-x:hidden;overflow-y:scroll;}
+.cn-modal-dialog>.modal-dialog {width:340px;left:15%;top:50%;position:absolute;}
+.alert {bottom:2px;height:80px;margin:0 23%;position:absolute;width:54%;line-height:50px;display:none;}
+/* .alert-warning {background-color:#ffff48} */
 
-.list-table thead td {background-color:#e8e8e8;text-align:center;border:1px solid #dddddd;}
-.list-table tbody td {border:1px solid #dddddd;text-align:center;}
-.notes-table thead td {background-color:#e8e8e8;border:0;text-align:left;vertical-align:top;}
-.notes-table tbody td {border:0;text-align:left;vertical-align:top;}
-.form-field tbody tr {height:40px;line-height:40px;}
-.form-field tbody tr td {height:40px;line-height:40px;}
+/* 正文部分 和 左右内容 */
+.body-content {position:absolute;width:100%;height:100%;top:40px;left:0;}
+.body-content-left, .body-content-right {height:100%;float:left;display:inline-block;background:#ffffff no-repeat scroll 0 0 / cover;}
+.body-content-left {width:20%;}
+.body-content-right {width:80%;}
+.body-content>.scroll-container{overflow-x:hidden;overflow-y:scroll;}
 
-.paging-anchor, .paging-anchor:hover{display:inline-block;height:25px;min-width:15px;line-height:25px;text-align:center;color:#333;border:1px solid #ddd;margin:0 3px;padding:0 5px;text-decoration:none;font-size:8.75pt;}
-.paging-current-anchor, .paging-current-anchor:hover{color:#fff;background-color:#aaa;font-weight:bolder;}
+/* 树状菜单 */
+a.tree-menu {width:100%;display:block;color:#333;cursor:pointer;text-decoration:none}
+a.tree-menu>div {position:relative;text-align:left;height:25px;line-height:25px;font-size:12px}
+a.tree-menu>div:hover{background-color:#eee}
+a.tree-menu>div>span.glyphicon{float:right;margin:5px 23px;font-size:13px;display:none;}
+a.tree-menu>div:hover>span.glyphicon{display:inline;}
+a.tree-select-menu>div{background-color:#ddd;}
+a.tree-select-menu>div:hover{background-color:#ddd;}
+a.tree-select-menu>div>span.glyphicon{display:inline;}
+a.tree-menu-0>div{font-weight:bold;height:25px;line-height:25px;padding:0 0 0 10px;border-bottom:1px solid #ccc}
+a.tree-menu-1>div{padding:0 0 0 40px}
+a.tree-menu-2>div{padding:0 0 0 70px}
+a.tree-menu-close>div, a.tree-menu-open>div{background-repeat:no-repeat;background-position:27px 8px;}
+a.tree-menu-close>div{background-image: url("button_right.gif");}
+a.tree-menu-open>div{background-image: url("button_down.gif");}
 
-.app-icons ul li{width:100px;height:100px;margin:32px 0 0 32px;}
-.app-icon {position:relative;width:100%;height:100%;top:0px;border:1px solid #aaa;}
-.app-name {position:relative;top:0px;text-align:center;font-weight:bold;color:#444;}
 
-.login-form{position:absolute;width:276px;padding:10px;height:96px;background:none repeat scroll 0 0 rgba(255,255,255,0.9);}
-input, select {vertical-align:middle;display:inline-block;outline: 0 none;-webkit-tap-highlight-color:rgba(0,0,0,0);}
-input.text-input, textarea, select.text-input {resize: none;padding: 0 4px;width:100%;-webkit-border-radius:4px;-khtml-border-radius:4px;-moz-border-radius:4px;border-radius:4px;font-size:12pt;background-color: #fff;text-align:left;border:1px solid #ccc; }
-input.text-input, select.text-input {height:32px;line-height:32px;}
-input.text-input:focus, textarea:focus {border:1px solid #56b4ef;-webkit-box-shadow:0 1px 3px rgba(0, 0, 0, 0.05) inset, 0 0 8px rgba(82, 168, 236, 0.6);-moz-box-shadow:0 1px 3px rgba(0, 0, 0, 0.05) inset, 0 0 8px rgba(82, 168, 236, 0.6);box-shadow:0 1px 3px rgba(0, 0, 0, 0.05) inset, 0 0 8px rgba(82, 168, 236, 0.6);}
-button {vertical-align:middle;-webkit-border-radius:4px;-khtml-border-radius:4px;-moz-border-radius:4px;border-radius:4px;width:150px;text-align:center;color:#ffffff;height:34px;line-height:30px;border:0;font-weight:bold;font-size:8.75pt;font-family: "Hiragino Sans GB","Microsoft YaHei","微软雅黑",tahoma,arial,simsun,"宋体";}
-.submit-btn{background-color:#F26459;} .submit-btn:hover{background-color:#D84A38;}
-.button-btn{background-color:#1195C5;} .button-btn:hover{background-color:#0084b4;}/*0084b4 1B9FCF*/
-.toggle-btn{background-color:#7BCD40;} .toggle-btn:hover{background-color:#61B31F;}
-.gray-btn{background-color:#ccc;color:#555;} .gray-btn:hover{background-color:#d5d5d5;color:#555;}
-.disable-btn {background:#cccccc none repeat scroll 0 0;}
+/* 分页 */
+.pagination>.active>a, .pagination>.active>a:hover {background-color:#ccc;border-color:#ccc;color:#666;}
 
-.input-box{display:inline-block;position:relative;}
-.input-error-pop {position:absolute; top:32px; width:101%;height:30px;line-height:30px;background-color:#333;color:#fff;font-size:12px;padding: 2px 4px;z-index:10;}
-.input-error-angle{position:absolute;border-bottom:5px solid #333;top:-4px;left:10px;}
+/* icon 演示页面 */
+.bs-glyphicons-list {list-style: outside none none;padding-left: 0;}
+.bs-glyphicons li {font-size: 12px;width: 12.5%;}
+.bs-glyphicons li {background-color: #f9f9f9;border: 1px solid #fff;float: left;font-size: 10px;height: 115px;line-height: 1.4;padding: 10px;text-align: center;width: 10%;}
+.bs-glyphicons .glyphicon {font-size: 24px;margin-bottom: 10px;margin-top: 5px;}
+.bs-glyphicons .glyphicon-class {display: block;overflow-wrap: break-word;text-align: center;}
 
-.ct-nav{position:relative;background-color:#eeeeee;border:1px solid #dddddd;}
-.ct-nav-table{width:100%;}
-.ct-nav-left{text-align:left;}
-.ct-nav-right{text-align:right;}
-.ct-nav-right, .ct-nav-left{height:40px;line-height:40px;width:50%;}
-.ct-nav-search, .ct-nav-create {position:relative;display:inline-block;right:11px;}
-.ct-submit-search {position:absolute;top:2px;right:0px;}
-.ct-clean-search {position:absolute;width:16px;height:16px;top:9px;right:1px;background-color:#aaaaaa;}
-.ct-submit-search span {font-family:octicons;font-size:23px;}
-.ct-clean-search span {font-family:octicons;font-size:13px;position:relative;left:3px;top:-6px;color:#ffffff;}
+/* 上传图片 */
+.upload-input, .upload-frame {height:200px;width:300px;top:0px;left:0px;}
+.upload-input {opacity:0;-moz-opacity:0;FILTER:progid:DXImageTransform.Microsoft.Alpha(opacity=0);}
+.upload-frame {background:rgba(0, 0, 0, 0) url(/image/add-file.png) no-repeat scroll 0 0 / contain;border:1px solid #cccccc;}
 
-.content-border {border: 1px solid #ccc;}
-.content-body {margin:15px auto;padding:10px 0;position:relative;text-align:left;}
-.content-menu {background-color:#fff;margin:0;padding:10px;position:fixed;right:40px;text-align:left;top:114px;width:180px;}
-.content-menu a{text-decoration: none;display:inline-block;}
-.content-menu a:hover{text-decoration: underline;}
-.content-menu div{height:20px;line-height:20px;}
-
-.kt-popup-loader {position:absolute;top:0;left:0;width:100%;height:100%;display:none;}
-.kt-popup-mask{position:absolute;top:0;left:0;width:100%;height:100%;background-color:#000;opacity:0.15;-moz-opacity:0.15;FILTER:progid:DXImageTransform.Microsoft.Alpha(opacity=15);}
-.kt-popup-doc {position:relative;background-color:#ffffff;width:80%;height:82%;margin:5% auto;border:1px solid #ffffff;opacity:1;}
-.kt-popup-shadow{width:100%;height:1px;position:absolute;top:40px;}
-.kt-popup-head{width:100%;height:40px;line-height:40px;text-align:right;overflow:hidden;position:absolute;top:0px;left:0px;background-color:#fff;}
-.kt-popup-body{text-align:center;overflow:hidden;position:relative;padding:20px;}
-.kt-popup-title{color:333;font-size:23px;width:100%;height:100%;text-align:center;}
-.kt-popup-close{position:absolute;display:block;font-family:octicons;font-size:23px;top:0px;right:0px;margin-right:10px;cursor:pointer;}
-
-.upload-image {height:200px;width:300px;position:absolute;top:0px;left:0px;opacity:0;-moz-opacity:0;FILTER:progid:DXImageTransform.Microsoft.Alpha(opacity=0);}
+/* input tags */
+.form-tags{width:600px;position:relative;}
+.tags-frame{width:100%;height:100%;cursor:text;}
+.tags-frame-focus {border:1px solid #56b4ef;-webkit-box-shadow:0 1px 3px rgba(0, 0, 0, 0.05) inset, 0 0 8px rgba(82, 168, 236, 0.6);-moz-box-shadow:0 1px 3px rgba(0, 0, 0, 0.05) inset, 0 0 8px rgba(82, 168, 236, 0.6);box-shadow:0 1px 3px rgba(0, 0, 0, 0.05) inset, 0 0 8px rgba(82, 168, 236, 0.6);}
+.tags-frame>span{height:25px;line-height:25px;font-size:12px;background-color:#777;padding:0 2px 0 9px;;color:#ffffff;margin:3px 4px;display:inline-block;}
+.tags-frame>span>p{display:inline-block;height:25px;line-height:25px;font-size:12px;color:#ffffff;margin-left:5px;cursor:pointer;padding:0 6px;}
+.tags-frame>input{border:0;}
+.tags-frame>.dropdown-menu{width:100%;}
+.tags-frame>.tags-enter{overflow-x:visible;}
+.tags-input{display:none;margin-left:3px;outline:0px;}
