--- a/public/css/KTAnchor.css
+++ b/public/css/KTAnchor.css
@@ -31,10 +31,9 @@ body .container{width:100%;}
 
 /* dialog 和 alert 调整样子 */
 .confirm-modal>.modal-dialog,.popup-modal>.modal-dialog{top:40px;}
-.popup-modal>.modal-lg{width:85%;height:85%;}
-/* .popup-modal>.modal-dialog>.modal-content{width:100%;height:100%;overflow:hidden;} */
-.popup-modal>.modal-dialog>.modal-content>.modal-body{overflow-x:hidden;overflow-y:scroll;}
-.cn-modal-dialog>.modal-dialog {width:340px;left:15%;top:50%;position:absolute;}
+.modal-my-lg {width:85%;height:85%;min-width:740px}
+.modal-my-sm {width:360px;}
+.popup-modal .modal-body{overflow-y:scroll;}
 .alert {bottom:2px;height:80px;margin:0 23%;position:absolute;width:54%;line-height:50px;display:none;}
 /* .alert-warning {background-color:#ffff48} */
 
