--- a/public/css/KTAnchor.css
+++ b/public/css/KTAnchor.css
@@ -1,6 +1,6 @@
 body{overflow:hidden;}
 label{font-weight:normal;}
-input,button,a{outline:0px;}
+input,button,button:focus,button:active,button:visited,a:focus,a:active{outline:none;}
 
 body .container{width:100%;}
 .radius-5{-webkit-border-radius:5px;-khtml-border-radius:5px;-moz-border-radius:5px;border-radius:5px;}
