--- a/public/css/KTAnchor.css
+++ b/public/css/KTAnchor.css
@@ -30,6 +30,7 @@ body .container{width:100%;}
 .angle-up{border-bottom:10px solid #ffffff;}
 
 /* dialog 和 alert 调整样子 */
+.cn-modal-dialog{bottom:20%;left:10%;position:absolute;}
 .confirm-modal>.modal-dialog,.popup-modal>.modal-dialog{top:40px;}
 .modal-my-lg {width:85%;height:85%;min-width:740px}
 .modal-my-sm {width:360px;}
