--- a/public/css/KTAnchor.css
+++ b/public/css/KTAnchor.css
@@ -72,6 +72,10 @@ a.tree-menu-open>div{background-image: url("button_down.gif");}
 .bs-glyphicons .glyphicon {font-size: 24px;margin-bottom: 10px;margin-top: 5px;}
 .bs-glyphicons .glyphicon-class {display: block;overflow-wrap: break-word;text-align: center;}
 
+/* 文档 */
+.doc-list ul {list-style: outside none none;padding-left: 0;}
+.doc-list li {border: 2px solid #ddd;float: left;font-size: 20px;height: 200px;padding: 165px 0 15px 0;text-align: center;width: 168px;}
+
 /* 上传图片 */
 .upload-input, .upload-frame {height:200px;width:300px;top:0px;left:0px;}
 .upload-input {opacity:0;-moz-opacity:0;FILTER:progid:DXImageTransform.Microsoft.Alpha(opacity=0);}
@@ -87,3 +91,4 @@ a.tree-menu-open>div{background-image: url("button_down.gif");}
 .tags-frame>.dropdown-menu{width:100%;}
 .tags-frame>.tags-enter{overflow-x:visible;}
 .tags-input{display:none;margin-left:3px;outline:0px;}
+
